# the-lab-education-backend

./: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  setup_structure.sh  test_db.py  vercel.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0bdc0528996a_init.py  0edfd2b14ac1_fix_user_id_foreign_keys_to_uuid.py  20241010_0001_initial_schema.py  51ddc645ddc5_change_user_id_to_uuid.py  abc123def456_change_columns_to_snake_case.py  b5cb7c8af283_baseline.py  def456ghi789_add_user_sessions_and_profiles_tables.py  ebf0b3dace54_baseline.py
api/: migrate.py  requirements.txt
content/courses/ml-foundations/: what-is-ml.lesson  (+1 more)
docs/: api_endpoints.md  database_architecture.md  deployment.md  project_architecture.md
scripts/: migrate.sh  migrate_fixed.sh  seed_database.py  simple_seed.py
src/: dependencies.py  main.py  schemas.py
src/api/: __init__.py
src/core/: __init__.py  cache.py  config.py  encryption.py  errors.py  logging.py  rate_limiting.py  security.py  supabase_client.py  utils.py
src/db/: __init__.py  session.py
src/models/: enrollment.py  profile.py  user.py  user_activity_log.py  user_lesson_progress.py  user_session.py
src/routers/: analytics_router.py  auth_router.py  health_router.py  lessons_router.py
src/schemas/: __init__.py  analytics.py  api.py  content_node.py  course.py  lesson.py  quiz.py  token.py  user.py
src/services/: __init__.py  analytics_service.py  content_scanner_service.py  file_system_service.py  profile_service.py  progress_service.py  session_service.py  ulf_parser.py  ulf_parser_service.py  user_service.py
tests/: conftest.py  mock_security.py  test_admin_router_no_auth.py  test_api_integration.py  test_api_schemas.py  test_auth.py  test_auth_router.py  test_dashboard.py  test_dependencies.py  test_lessons.py  test_public_courses.py  utils.py
tests/api/: test_admin_router.py  test_analytics_router.py  test_lessons_router.py  test_quizzes.py  test_users_router.py
tests/core/: test_security.py  test_utils.py
tests/services/: test_analytics_service.py  test_content_scanner_service.py  test_file_system_service.py  test_progress_service.py  test_session_service.py  test_ulf_parser.py  test_ulf_parser_service.py  test_user_service.py
(+14 files in other folders)
