[tool.poetry]
package-mode = false

[project]
name = "the-lab-education-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic[email] (>=2.11.10,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "supabase (>=2.21.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=23.0.0,<24.0.0)",
    "python-frontmatter (>=1.0.0,<2.0.0)",
    "PyYAML (>=6.0,<7.0)",
    "fastapi-cache2 (>=0.2.0,<0.3.0)",
    "PyJWT (>=2.0.0,<3.0.0)",
    "loguru (>=0.7.0,<0.8.0)",
    "cachetools (>=5.0.0,<6.0.0)",
    "tenacity (>=8.0.0,<9.0.0)",
    "pybreaker (>=1.2.0,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "cryptography (>=42.0.0,<43.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
